refactor(server): wire NioHttpServer, RequestDispatcher, and RouteRegistry with worker pool & exception pipeline